benchmarks/inference-server/vllm/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
data:
  envoy.yaml: |
    static_resources:
      listeners:
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 8080
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: backend
                  domains:
                  - "*"
                  routes:
                  - match:
                      prefix: "/"
                      headers:
                      - name: "x-route-to"
                        exact_match: "deployment-1"
                    route:
                      cluster: service1
                  - match:
                      prefix: "/"
                      headers:
                      - name: "x-route-to"
                        exact_match: "deployment-2"
                    route:
                      cluster: service2
              http_filters:
              - name: envoy.filters.http.wasm
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                  config:
                    name: my_wasm_filter
                    root_id: some_id
                    vm_config:
                      vm_id: my_vm_id
                      runtime: "envoy.wasm.runtime.v8"
                      code:
                        local:
                          filename: "/etc/envoy/wasm_filter.wasm"
              - name: envoy.filters.http.router
      clusters:
      - name: service1
        connect_timeout: 0.25s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: service1
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 34.143.187.72
                    port_value: 80
      - name: service2
        connect_timeout: 0.25s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: service2
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 34.143.183.39
                    port_value: 80
